public/css/styles.css
/* ... */
.active-overview-tab {
  color: white;
}

.overview-container {
  /* background-color: var(--colour-h1); */
  display: flex;
  align-items: baseline;
  gap: 10px;
  width: 90%;
  margin-left: 5%;
  margin-right: 5%;
  border-radius: 25px;
  margin-top: 2%;
  margin-bottom: 5%;
}

.data-table .patient-chart-section {
  width: 100%;
}

/* .data-table .inactive-toggle {
  color: white;
  background: none;
}

.data-table .active-toggle {
  color: var(--colour-h1);
  background-color: var(--colour-background-teal);
} */

.data-table {
  width: 75%;
  margin: 50px 0px;
}

.data-table h1 {
  font-size: var(--text-h1);
  color: var(--colour-h1);
  text-align: centre;
  font-weight: 600;
}

.patient-notes {
  background-color: var(--colour-h1);
  width: 25%;
  border-radius: 25px;
  padding: 10px;
}

.patient-notes .info {
  display: flex;
  align-items: center;
  border-radius: 15px;
  background-color: rgba(126, 126, 126, 0.575);
  padding: 0 0 0 5px;
  width: 400px;
  text-align: left;
  margin-top: 25px;
  margin-bottom: 25px;
}

.patient-notes .info-text {
  color: white;
}

.notes-table {
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

.notes-table h1 {
  font-size: var(--text-h2);
  text-align: center;
  font-weight: 600;
}

.note-container {
  font-size: var(--text-p);
  color: var(--colour-h1);
  background-color: #fff740;
  margin-bottom: 10px;
  min-height: 120px;
  max-height: 300px;
  padding: 15px;
  position: relative;

  overflow: auto;
  display: flex;
  flex-direction: column;
}

.note-container img {
  position: absolute;
  top: 0px;
  right: 0px;
  cursor: pointer;
}

.note-container p {
  word-wrap: break-word;
  white-space: pre-wrap;
}

#copy-to-note:hover {
  cursor: pointer;
  transform: translate(0, -3px);
  transition: transform .3s ease-out;
}

.patient-notes textarea {
  white-space: pre-wrap;
  width: 400px;
}

.note-container p:nth-of-type(2) {
  font-weight: 300;
  font-style: italic;
}

.note-options {
  justify-content: flex-start;
  margin-top: 25px;
  margin-bottom: 5px;
}

.note-option {
  border-radius: 50%;
  width: 30px;
  height: 30px;
  margin-left: 5px;
  margin-right: 5px;

  cursor: pointer;
}

.note-selected-option {
  border: 2px solid white;
  
  width: 35px;
  height: 35px;
}

.dark-yellow {
  background-color: #fff740;
}
.light-yellow {
  background-color: #feff9c;
}
.dark-pink {
  background-color: #ff65a3;
}
.light-pink {
  background-color: #ff7eb9;
}

#back-to-top-btn {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: var(--colour-h1);/* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 10px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

#back-to-top-btn:hover {
  background-color: #555;
}

.flex-column-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.flex-row-center {
  display: flex;
  flex-direction: row;
}

